* DESCRIPTION: Match title of paper. * R/readParameters.R: Remove useless stop() default arguments. * R/utils.R: Likewise. * R/readConfiguration.R: Likewise. * R/generation.R: Likewise. * R/main.R: Fix whitespace in irace.license. * svn:ignore: TAGS. * web/Makefile: Build tar.gz files for web tutorial.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1520 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -24,6 +24,8 @@ TODO General (in order of importance):
  * Various initialization modes Latin Hyper-cube, random, exhaustive,
    Hammersley point set, etc.
 
+ * Use testthat package for testing: http://r-pkgs.had.co.nz/tests.html
+ 
  * The truncated normal distribution actually gives more probability to the
    side further away from the mean (that is, the integral of the PDF is larger
    on the side where the distance is larger from the mean). This is not really
