* Remove default argument in target.runner. Scenario will always be passed by irace.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1525 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/doc/irace-manual.tex
+++ b/doc/irace-manual.tex
@@ -1202,7 +1202,7 @@ three-dimensional functions and we set the maximum number of
 iterations of SANN to $5000$.
 
 \begin{CodeInput}
-target.runner <- function(instance, candidate, extra.params = NULL, config = list())
+target.runner <- function(instance, candidate, extra.params = NULL, config)
 {
   D <- 3
   par <- runif(D, min=-1, max=1)
